<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Fragment1"
    android:orientation="vertical"
    android:background="@drawable/bg2">

    <ImageView
        android:id="@+id/imgFaceDetection"
        android:layout_width="wrap_content"
        android:layout_height="216dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img2" />
    <TextView
        android:id="@+id/textTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/title2"
        android:textColor="@color/colorWhite"
        android:textSize="28sp" />
    <TextView
        android:id="@+id/textDesc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/desc2"
        android:textSize="18sp"
        android:textColor="@color/colorOrange"
        android:gravity="center" />
    <LinearLayout
        android:id="@+id/layoutNext2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txvSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom|start"
            android:text="@string/back"
            android:textColor="@color/colorOrange"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txvNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:gravity="bottom|end"
            android:text="@string/next"
            android:textColor="@color/colorOrange"
            android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>