<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Fragment3"
    android:orientation="vertical"
    android:background="@drawable/bg3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgLogin"
            android:layout_width="wrap_content"
            android:layout_height="233dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img3">

        </ImageView>
        <EditText
            android:id="@+id/et1"
            android:layout_width="360dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:hint="@string/email">
        </EditText>
        <EditText
            android:id="@+id/et2"
            android:layout_width="360dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword" >

        </EditText>
        <Button
            android:id="@+id/btLogin"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@color/colorOrange">
        </Button>
        <LinearLayout
            android:id="@+id/layoutLoginPrev"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txvSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="bottom|start"
                android:text="@string/back"
                android:textColor="@color/colorOrange"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>